--- a/.gitignore
+++ b/.gitignore
@@ -143,4 +143,7 @@ ENV/
 # Rope project settings
 .ropeproject
 
+# Log file
+log.txt
+
 # End of https://www.gitignore.io/api/osx,python,microsoftoffice
